======================= Release 1.0 *** =======================

Improvements

* [GH-10] Make the class attributes definitions configurable
* [GH-12] Improve pagination
* [GH-13] Split the AnalyticsVocab class into one class per vocabulary
* [GH-33] Add sesame query parser as submodule
* [GH-45] Update sesame dependency to 2.7.11

New Features

* [GH-11] Implement the Single-Class Label Model
* [GH-9] Provide a REST API to SparQLed
* [GH-49] Retrieve recommendation query patterns from a template

Tasks

* [GL-27] Clean the code
* [GH-37] Remove Virtuoso sesame plugin
* [GH-40] Clean sesame backend cli
* [GH-42] Remove unused modules
* [GH-47] Add NQuads data format

Bugs

* [GH-54] Correct the type of result returned by SparqlQueryServlet