@@ -30,38 +30,42 @@ import org.sindice.core.sesame.backend.SesameBackend.QueryIterator.QueryResultPr
 
 /**
  * Provides access method to Sesame repositories: query, adding data.
- * 
- * @param <VALUE> The type of the query's results
  */
-public interface SesameBackend<VALUE> {
+public interface SesameBackend {
 
   public static final int LIMIT = 1000;
 
+  /**
+   * @param <VALUE>
+   *          The type of the query's results
+   */
   public abstract class QueryIterator<VALUE>
   implements Iterator<VALUE> {
 
-    public interface QueryResultProcessor<VALUE> {
+    public interface QueryResultProcessor<V> {
 
-      public VALUE process(Object bs);
+      public V process(Object bs);
 
     }
 
     /**
-     * Get the results through pagination. If 0, there will be no pagination,
-     * i.e., all results are received with a single query.
+     * Get the results through pagination. If 0, there will be no pagination, i.e., all results are received with a
+     * single query.
+     * 
      * @param l
      */
     public abstract void setPagination(int l);
 
     /**
-     * get the binding names in case of a select Query.
-     * Empty array otherwise.
+     * get the binding names in case of a select Query. Empty array otherwise.
+     * 
      * @return
      */
     public abstract Set<String> getBindingNames();
 
     /**
      * Return the AST of the submitted query
+     * 
      * @return
      */
     public abstract ASTQueryContainer getQueryAst();
@@ -75,42 +79,58 @@ public interface SesameBackend<VALUE> {
 
   /**
    * Close the underlying repository
+   * 
    * @throws SesameBackendException
    */
-  public void closeConnection() throws SesameBackendException;
+  public void closeConnection()
+  throws SesameBackendException;
+
   /**
    * Starts the underlying repository
+   * 
    * @throws SesameBackendException
    */
-  public void initConnection() throws SesameBackendException;
+  public void initConnection()
+  throws SesameBackendException;
+
   /**
    * Get a direct access to the repository
+   * 
    * @return
    */
   public RepositoryConnection getConnection();
 
   /**
    * Add data to the repository
+   * 
    * @param path
    * @param format
    * @param contexts
-   * @throws SesameBackendException 
+   * @throws SesameBackendException
    */
-  public void addToRepository(File path, RDFFormat format, Resource...  contexts) throws SesameBackendException;
+  public void addToRepository(File path, RDFFormat format, Resource... contexts)
+  throws SesameBackendException;
+
   /**
    * Returns an iterator over the results of the submitted query
+   * 
    * @param query
    * @return
    * @throws SesameBackendException
    */
-  public QueryIterator<VALUE> submit(String query) throws SesameBackendException;
+  public <VALUE> QueryIterator<VALUE> submit(String query)
+  throws SesameBackendException;
+
   /**
-   * Returns an iterator over the results of the submitted query. Process results using the given {@link QueryResultProcessor}
+   * Returns an iterator over the results of the submitted query. Process results using the given
+   * {@link QueryResultProcessor}
+   * 
    * @param qrp
    * @param query
    * @return
    * @throws SesameBackendException
    */
-  public QueryIterator<VALUE> submit(QueryResultProcessor<VALUE> qrp, String query) throws SesameBackendException;
+  public <VALUE> QueryIterator<VALUE> submit(QueryResultProcessor<VALUE> qrp, String query)
+  throws SesameBackendException;
 
 }
